# CANgSend

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/CANgSend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/CANgSnd/: CANgSend.py  __init__.py
